public/stylesheets/style.css
/*View Sizing*/
.row {
  max-width: 100%;
}


/*Fonts*/
body{
  font-family: 'Raleway', sans-serif;
  font-weight: lighter;
  font-size: 16px;
}
h1 {
  font-size:30px;
  font-weight:bold;
  font-family:
}

.infoBtn {
  font-size: 45px;
  color: gray;
  float:right;
  width:60px;
  min-width:60px;
  height:50px;
  position:relative;
}

a{
  color: #fff;
}
.infoBtn a {
  color: black;
  position: absolute;
  top: -8px;
  right: 5px;
}

.emergencyBtn {
  font-size: 45px;
  width:37px;
  min-width:37px;
  height:50px;
  position:absolute;
  right: 20px;
  bottom: 18px;
}

.emergencyBtn a {
  color: #d37984;
  min-width: 105px;
}

#callEmergencyPopup > a {
  width: 100%;
  margin-top:40px;
  margin-bottom:40px;
  z-index:-1;
}

.input-wrapper i{
  position: absolute;
  margin: 5px 5px 5px 10px;
  font-size: 20px;
}

/*Buttons*/
.button {
  background-color: #FFFFFF;
  color: #000000;
  border: 1px solid #57585A;
  transition:none;
  padding: .4em 0em .4em 0em;
  margin: 0;
  border-radius: 10px;

}

.button:hover, .button:focus {
  background-color: #26A69A;
  color: #FFFFFF;
}

.reveal {
  padding-top:20px;
}

[type=color], [type=date], [type=datetime-local], [type=datetime], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=time], [type=url], [type=week], textarea, [type='text']:focus, [type='password']:focus, [type='date']:focus, [type='datetime']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='week']:focus, [type='email']:focus, [type='number']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='url']:focus, [type='color']:focus, textarea:focus {
  border: none;
  background-color: #8CD4CC;
  outline: none;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
  box-shadow: none;
  transition: none;
}

/*Nav Bar*/
.nav-bar {
  padding-left:5px;
  margin-top:10px;
  margin-bottom:6px;
}

.logo {
  float:left;
  margin-right:10px;
}

.logo > img {
  height:50px;
}

#missionStatement {
  font-weight: bold;
  color: #5d5d5d;
  padding-top: 10px;
  padding-left: 10px;
}
@media screen and (max-width: 34em) {
  #missionStatement {
    padding-top:3px;
    font-size:11px;
  }
}

.infoBtnMobile {
  display:none;
}

.infoBtnMobile > a {
  color:#26A69A;
}

@media only screen and (max-device-width: 414px) and (max-device-height: 736px) {
  .nav-bar {
    display: none;
  }

  .infoBtnMobile {
    display:block;
    font-size: 45px;
    width:37px;
    min-width:37px;
    height:50px;
    position:absolute;
    right: 80px;
    bottom: 18px;
  }
}

.filter-directions-nav-bar {
  font-weight:bold;
  border-bottom: 1px solid #BBBBBB;
  padding-left:11px;
  padding-right:11px;
}
.filter-directions-nav-bar > .row > .columns:first-child {
  border-right: 1px solid #BBBBBB;
}
.filter-directions-nav-bar > .row > .columns:last-child {
  padding-left: 10px;
}

#filter-button {
  cursor:pointer;
  padding-top:3px;
  padding-bottom:2px;
}
#filter-button:hover,
.filter-button-active {
  background-color: #26A69A;
  color: #FFFFFF;
}
.filter-button-inactive {
  background-color: #FFFFFF;
  color: #000000;
}

#directions-button {
  cursor:pointer;
  padding-top:3px;
  padding-bottom:2px;
}
#directions-button:hover,
.directions-button-active {
  background-color: #26A69A;
  color: #FFFFFF;
}
.directions-button-inactive {
  background-color: #FFFFFF;
  color: #000000;
}
#directions-button:hover > span,
.directions-button-active > span {
  /*background:url('../images/directions_btn_active.png') left center no-repeat;*/
  /*padding-left:30px;*/
}
.directions-button-inactive > span {
  /*background:url('../images/directions_btn_inactive.png') left center no-repeat;*/
  /*padding-left:30px;*/
}

#filter-button:hover > span,
.filter-button-active > span {
  /*background:url('../images/filter_button_active.png') left center no-repeat;*/
  /*padding-left:30px;*/
}
.filter-button-inactive > span {
  /*background:url('../images/filter_button_inactive.png') left center no-repeat;*/
  /*padding-left:30px;*/
}

#solveRoute {
  cursor:pointer;
  text-align: center;
  font-weight: bold;
  padding-top:4px;
  padding-bottom:4px;
  border-bottom: 1px solid #BBBBBB;
}

#solveRoute:hover {
  background-color: #26A69A;
  color: #FFFFFF;
}

#routeNameForm {
	position: absolute;
	bottom: 170px;
	right: 0px;
	color: white;
	background:black;
}

.esriSimpleSlider {
  margin-top:55px;
  z-index:inherit !important;
}

.esriSimpleSliderIncrementButton:hover,
.esriSimpleSliderDecrementButton:hover {
  color:#FFFFFF !important;
  background-color: #26A69A !important;
}

#map {
  position: absolute;
  width:100%;
  height:100%;
  z-index: -1;
}

#map_row {
  margin-left:0;
  margin-right:0;
}

#map_row > .columns {
  padding-left:0;
}

.filter-options-nav-bar {
  font-weight:bold;
  border-bottom: 1px solid #BBBBBB;
  overflow: hidden;}
.filter-options-nav-bar > .row > .columns:first-child {
  border-right: 1px solid #BBBBBB;
}
.filter-options-nav-bar > .row > .columns:nth-child(2) {
  border-right: 1px solid #BBBBBB;
}
.filter-options-nav-bar > .row > .columns:last-child {
}
.filter-options-nav-bar > .row > .columns {
  padding:0;
}
.filter-options-nav-bar > .row > .columns > select {
  padding-left:15px;
  cursor: pointer;
}
.filter-options-nav-bar > .row > .columns > select:hover {
  background-color: #26A69A;
  color: #FFFFFF;
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="32" height="24" viewBox="0 0 32 24"><polygon points="0,0 32,0 16,24" style="fill: #FFFFFF"></polygon></svg>')
}

/*Forms*/
select {
  margin:0;
  border:none;
  height: 30px;
  padding-top: 0px;
  padding-bottom: 0px;
  line-height: 30px;
  border-radius:0 !important;
  font-size:14px;
}

/*option {
  min-height:20px;
}*/
/* remove the iphone bug where the input boxes are rounded */
input {
  -webkit-border-radius: 0px;
  -webkit-appearance: none;
  border-radius: 50%;
  margin: 3px;
}

/* only affects input tag placeholder color - BEGIN */
::-webkit-input-placeholder { /* WebKit, Blink, Edge */
  color: #0a0a0a !important;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
  color: #0a0a0a !important;
  opacity: 1;

}
::-moz-placeholder { /* Mozilla Firefox 19+ */
  color: #0a0a0a !important;
  opacity: 1;
}
:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: #0a0a0a !important;
}
/* only affects input tag placeholder color - END */

input:focus,
select:focus,
textarea:focus,
button:focus {
  outline: none;
}

input:disabled, input[readonly], textarea:disabled, textarea[readonly] {
  opacity:.6;
}

#resetBtn {
  position:absolute;
  left: 20px;
  bottom: 20px;
  padding: 5px 5px 5px 5px;
}

.BypassRouteSelected {
  background-color: #26A69A;
  color: #FFFFFF;
  min-width: 90px;
  max-width:80px;
}

#BypassRoute {
  right: 20px;
  position: absolute;
  bottom: 156px;
  min-width: 105px;
}

#BypassRoute:hover > span,
.BypassRouteSelected > span {
  background:url('../images/curved_arrow_white.png') left center no-repeat;
  padding-left:21px;
}

.BypassRouteUnselected {
  background-color: #FFFFFF;
  color: #000000;
  min-width: 90px;
  max-width:80px;
}

.BypassRouteUnselected > span {
  background:url('../images/curved_arrow_black.png') left center no-repeat;
  padding-left:21px;
}

#NormalRoute {
  right: 20px;
  position: absolute;
  bottom: 104px;
  min-width: 105px;
}

.NormalRouteSelected {
  background-color: #26A69A;
  color: #FFFFFF;
    min-width: 90px;
  max-width:80px;
}

#NormalRoute:hover > span,
.NormalRouteSelected > span {
  background:url('../images/curved_arrow_white.png') left center no-repeat;
  padding-left:21px;
}

.NormalRouteUnselected {
  background-color: #FFFFFF;
  color: #000000;
  min-width: 90px;
  max-width:80px;
}

.NormalRouteUnselected > span {
  background:url('../images/curved_arrow_black.png') left center no-repeat;
  padding-left:21px;
}

.bottomRightNav {
  right: 20px;
  bottom: 2px;
  position: absolute;
  width:102px;
}

.bottomRightNav > button {
  margin-bottom: 18px;
}

#startAddress{
  border-top: 1px solid #8cd4cc;
  border-bottom: 1px solid #8cd4cc;
  width: 300px;
}

#destinationAddress {
  border-bottom: 1px solid #8cd4cc;
}



/*#startAddress.directions-textbox {
  background-image:url('../images/directions_arrow.png');
}*/

/*}
#destinationAddress.directions-textbox {
  background-image:url('../images/pin.png');
}*/

.dynamicDirectionsRow {
  padding:5px 59px;
}

.directions-textbox {
  text-indent:23px !important;
  width:100% !important;
  height:34px !important;
  /*padding:7px 0;*/
  margin:0 !important;
  color:#000 !important;
  border:none !important;
  font-weight:bold !important;
  background-color: #fff !important;
  background-position: left center !important;
  background-repeat: no-repeat !important;
  border-radius:0 !important;
}

.directions-nav-bar {
  padding-left:0;
  padding-right:0;
}
.directions-nav-bar > form:first-child > .row,
.directions-nav-bar > form > .row:last-child,  {
  background: #fff;
}

.close-button {
  top: 5px;
  right: 10px;
  position: absolute;
  font-size:40px;
  z-index: 5;
}

#infoPopup {
  background: #B5B5B5;
  color: white;
}

#directions-button {
  text-align: center;
}

#crimesButton {
  width:80px;
  align:block;
}
#featuresButton {
  width:88px;
  align:block;
}

.rightAlign {
  float:right;
  width:190px;
  margin-top:15px;
}

.esriGeocoder {
  border-radius: 0px !important;
  height: 25px !important;
    border-top:1px solid #8cd4cc;
  border-bottom:3px solid #8cd4cc;

}


#startAddAbove {
  height: 25px;
}


.esriGeocoderContainer {
  width: 100% !important;
  height: 25px !important;
  margin: 0px 0px 0px 0px  !important;
}
#startAddress {
  width: 100%;
}
.esriGeocoderIcon {
  display: none !important;
}

#startAddress_input {
 width: 100% !important;
  height: 25px !important;
  text-indent: 30px;
  padding: 0px !important;
  margin: 0px  !important;
  border: none;
  font-size: .85rem !important;
  background-color: #f2f2f2;
  color: #575757;
}

#destinationAddress {
  width: 100%;
}

#destinationAddress_input {
  width: 100% !important;
  height: 25px !important;
  text-indent: 30px;
  padding: 0 !important;
  margin: 0 !important;
  border: none;
  font-size: .85rem !important;
  background-color: #f2f2f2;
  color: #575757;
}

#myLocation {
  width: 40px;
  border-radius:20px;
  height: 40px;
}

#myLocation {
  font-size: 30px;
  color: #5d5d5d;
  padding: 5px;
  margin-top:15px;
  margin-left:20px;
}
#myLocation:hover, #myLocation:active {
  color: #FFFFFF;
}

